# resume-engine

./: .gitignore  README.md  pyproject.toml
src/resume_engine/: __init__.py  cli.py  layouts.py  pipeline.py  user_en.json  user_zh.json
src/resume_engine/modules/: ASSEMBLY_ORDER  base.css  card-styles.json  cards.css  decos.json  densities.json  fonts.json  hero.css  icons.css  layout-t.css  layouts_K_O.json  layouts_K_T.json  pagination.css  photo.css  print.css  radius.json  shadows.md  shapes.json  themes.json
