[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-engine"
version = "3.0.0"
description = "12 layouts × 20 themes × 9 fonts × 8 decos × 7 shapes = 920K unique resume combinations. One command → printable HTML+PDF."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Xingpi Dong"}
]
keywords = ["resume", "cv", "pdf", "html", "job", "career", "template", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Printing",
]

[project.scripts]
resume = "resume_engine.cli:main"
resume-pipeline = "resume_engine.pipeline:main"

[project.urls]
Homepage = "https://github.com/xingpidong/resume-engine"
Repository = "https://github.com/xingpidong/resume-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resume_engine = ["modules/*.css", "modules/*.json", "modules/*.md", "modules/ASSEMBLY_ORDER", "user_zh.json", "user_en.json"]
